14419 iprb transmit watchdog somewhat overzealous Reviewed by: Andy Fiddaman <andy@omnios.org> Reviewed by: Garrett D'Amore <garrett@damore.org> Reviewed by: Robert Mustacchi <rm@fingolfin.org> Approved by: Dan McDonald <danmcd@joyent.com>